# hive

./: .gitignore  AGENTS.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
agents/: planner.md  reviewer.md  scout.md  worker.md
desktop/: README.md  index.html  package-lock.json  package.json
desktop/src/: App.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
desktop/src/components/: TerminalPane.tsx
docs/design/: tauri-hive.md
docs/ideas/: wt-resize-pane-cli.md
hello-lolo/: BRAINSTORM.md  WIREFRAMES.md
src/: index.ts  types.ts
src/broker/: protocol.ts  server.ts
src/client/: connection.ts  inbox.ts
src/layout/: panes.ts
src/tools/: agents.ts  broadcast.ts  channel-create.ts  channel-join.ts  channel-leave.ts  channel-send.ts  channels.ts  chat.ts  lifecycle.ts  rename.ts  reservations.ts  send.ts  spawn-core.ts  spawn.ts
test/: broker-test.ts
