[package]
name = "hive-desktop"
version = "0.1.0"
description = "Hive desktop shell with xterm.js + ConPTY"
authors = ["danielstarman"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
portable-pty = "0.8.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = [] }
uuid = { version = "1", features = ["v4"] }
